--- a/doctors/docker-compose.yaml
+++ b/doctors/docker-compose.yaml
@@ -1,5 +1,9 @@
 version: '3'
 
+volumes:
+  db-data:
+    driver: local
+
 services:
     postgres:
       image: postgres:15.1-alpine
@@ -10,6 +14,6 @@ services:
         POSTGRES_DB: mcsp
       ports:
         - '5432:5432'
-#      volumes:
-#        - db-data:/var/lib/postgresql/data
+      volumes:
+        - db-data:/var/lib/postgresql/data
 
