feat: Connecting to Consul
Connecting servers to Consul for load balancing and retrieving configurations

--- a/doctors/docker-compose.yaml
+++ b/doctors/docker-compose.yaml
@@ -17,3 +17,9 @@ services:
       volumes:
         - db-data:/var/lib/postgresql/data
 
+    consul:
+      container_name: consul-mcsp
+      image: hashicorp/consul:latest
+      ports:
+        - '8500:8500'
+
